Conversion to GanjaCoin

--- a/wallet/CHANGES
+++ b/wallet/CHANGES
@@ -1,8 +1,9 @@
-Solcoin Wallet
+GanjaCoin Wallet
 -----------------
 v0.1.0-beta
 *Forked Digitalcoin-Wallet
 *Converted to Solcoin
+*Converted to GanjaCoin Wallet
 
 digitalcoin Wallet
 -----------------
